--- a/images/manifest.json
+++ b/images/manifest.json
@@ -6,6 +6,63 @@
   "type" : "Manifest",
   "@context" : "http://iiif.io/api/presentation/3/context.json",
   "items" : [ {
+    "width" : 1599,
+    "id" : "https://William-Le-Roux.github.io/IIIF-Brueghel/images/Pieter_Brueghel_the_Elder_The_Dutch_Proverbs/canvas/",
+    "label" : {
+      "none" : [ "Pieter_Brueghel_the_Elder_The_Dutch_Proverbs" ]
+    },
+    "type" : "Canvas",
+    "items" : [ {
+      "id" : "https://William-Le-Roux.github.io/IIIF-Brueghel/images/Pieter_Brueghel_the_Elder_The_Dutch_Proverbs/AnnoPage/",
+      "type" : "AnnotationPage",
+      "items" : [ {
+        "motivation" : "Painting",
+        "id" : "https://William-Le-Roux.github.io/IIIF-Brueghel/images/Pieter_Brueghel_the_Elder_The_Dutch_Proverbs/annotation/",
+        "type" : "Annotation",
+        "body" : {
+          "service" : [ {
+            "tiles" : [ {
+              "scaleFactors" : [ 32, 16, 8, 4, 2, 1 ],
+              "width" : 1024,
+              "height" : 1024
+            } ],
+            "protocol" : "http://iiif.io/api/image",
+            "sizes" : [ {
+              "width" : 50,
+              "height" : 36
+            }, {
+              "width" : 100,
+              "height" : 71
+            }, {
+              "width" : 200,
+              "height" : 142
+            }, {
+              "width" : 400,
+              "height" : 283
+            }, {
+              "width" : 800,
+              "height" : 566
+            }, {
+              "width" : 1599,
+              "height" : 1132
+            } ],
+            "profile" : "http://iiif.io/api/image/2/level0.json",
+            "width" : 1599,
+            "@id" : "https://William-Le-Roux.github.io/IIIF-Brueghel/images/Pieter_Brueghel_the_Elder_The_Dutch_Proverbs",
+            "@context" : "http://iiif.io/api/image/2/context.json",
+            "height" : 1132
+          } ],
+          "format" : "image/jpeg",
+          "width" : 1599,
+          "id" : "https://William-Le-Roux.github.io/IIIF-Brueghel/images/Pieter_Brueghel_the_Elder_The_Dutch_Proverbs/full/full/0/default.jpg",
+          "type" : "Image",
+          "height" : 1132
+        },
+        "target" : "https://William-Le-Roux.github.io/IIIF-Brueghel/images/Pieter_Brueghel_the_Elder_The_Dutch_Proverbs/canvas/"
+      } ]
+    } ],
+    "height" : 1132
+  }, {
     "width" : 6567,
     "id" : "https://William-Le-Roux.github.io/IIIF-Brueghel/images/Pieter_Bruegel_the_Elder_Childrens_Games/canvas/",
     "label" : {
