--- a/images/manifest.json
+++ b/images/manifest.json
@@ -6,6 +6,63 @@
   "type" : "Manifest",
   "@context" : "http://iiif.io/api/presentation/3/context.json",
   "items" : [ {
+    "width" : 2126,
+    "id" : "https://William-Le-Roux.github.io/IIIF-Brueghel/images/The_Triumph_of_Death_by_Pieter_Bruegel_the_Elder/canvas/",
+    "label" : {
+      "none" : [ "The_Triumph_of_Death_by_Pieter_Bruegel_the_Elder" ]
+    },
+    "type" : "Canvas",
+    "items" : [ {
+      "id" : "https://William-Le-Roux.github.io/IIIF-Brueghel/images/The_Triumph_of_Death_by_Pieter_Bruegel_the_Elder/AnnoPage/",
+      "type" : "AnnotationPage",
+      "items" : [ {
+        "motivation" : "Painting",
+        "id" : "https://William-Le-Roux.github.io/IIIF-Brueghel/images/The_Triumph_of_Death_by_Pieter_Bruegel_the_Elder/annotation/",
+        "type" : "Annotation",
+        "body" : {
+          "service" : [ {
+            "tiles" : [ {
+              "scaleFactors" : [ 32, 16, 8, 4, 2, 1 ],
+              "width" : 1024,
+              "height" : 1024
+            } ],
+            "protocol" : "http://iiif.io/api/image",
+            "sizes" : [ {
+              "width" : 67,
+              "height" : 48
+            }, {
+              "width" : 133,
+              "height" : 95
+            }, {
+              "width" : 266,
+              "height" : 190
+            }, {
+              "width" : 532,
+              "height" : 380
+            }, {
+              "width" : 1063,
+              "height" : 759
+            }, {
+              "width" : 2126,
+              "height" : 1517
+            } ],
+            "profile" : "http://iiif.io/api/image/2/level0.json",
+            "width" : 2126,
+            "@id" : "https://William-Le-Roux.github.io/IIIF-Brueghel/images/The_Triumph_of_Death_by_Pieter_Bruegel_the_Elder",
+            "@context" : "http://iiif.io/api/image/2/context.json",
+            "height" : 1517
+          } ],
+          "format" : "image/jpeg",
+          "width" : 2126,
+          "id" : "https://William-Le-Roux.github.io/IIIF-Brueghel/images/The_Triumph_of_Death_by_Pieter_Bruegel_the_Elder/full/full/0/default.jpg",
+          "type" : "Image",
+          "height" : 1517
+        },
+        "target" : "https://William-Le-Roux.github.io/IIIF-Brueghel/images/The_Triumph_of_Death_by_Pieter_Bruegel_the_Elder/canvas/"
+      } ]
+    } ],
+    "height" : 1517
+  }, {
     "width" : 1599,
     "id" : "https://William-Le-Roux.github.io/IIIF-Brueghel/images/Pieter_Brueghel_the_Elder_The_Dutch_Proverbs/canvas/",
     "label" : {
